updated homepage url to https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tiiatcha.github.io/react_accordion",
+  "homepage": "https://tiiatcha.github.io/react_accordion",
   "name": "accordion_react",
   "version": "0.1.0",
   "private": true,
